<resources>
    <string name="app_name">ChefNest</string>
    <string name="wel_txt">Register</string>
    <string name="wel_txt2">ChefNest</string>
    <string name="login_head">Login</string>
    <string name="login_head2">Login</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="txt1">"Don't have an Account?"</string>
    <string name="txt2">SignUp</string>
    <string name="hint_1">Search</string>
    <string name="popular_text">Popular Dishes</string>
    <string name="popular_btn_text">BUY NOW</string>
    <string name="test1">Cheese Hot Hamburger</string>
    <string name="dishes_txt">Dishes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_account">Account</string>
    <string name="minus">-</string>
    <string name="cart_title">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery">Delivery Fee</string>
    <string name="notification_title">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_type">Select Your Type</string>
    <string name="customer_chip">Customer</string>
    <string name="chef_chip">Chef</string>
    <string name="otp_text1">OTP</string>
    <string name="otp_text2">Verification</string>
    <string name="verification_sub">Enter the verification code sent on the email address you entered.</string>
    <string name="verifi_sub2">If you didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="single_product_des">Description</string>
    <string name="sigle_product_cart_txt">Add To Cart</string>
    <string name="filters">Filters</string>
    <string name="profile_txt1">Hello!</string>
    <string name="profile_txt2">My Orders</string>
    <string name="profile_pay">To Pay</string>
    <string name="profile_to_ship">Orders</string>
    <string name="profile_shipped">Shipped</string>
    <string name="profile_history">Order History</string>
    <string name="logout">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="like">You may also like</string>
    <string name="edit_image">Update Profile Image</string>
    <string name="update_profile">Update Profile</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="dietary">Dietary</string>
    <string name="cuisine">Cuisine</string>
    <string name="price">Price</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="about_1">Get In Touch</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
</resources>